9_laravel_deploy/k8s/deploy_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: study-db
  name: study-db
spec:
  replicas: 1
  selector:
    matchLabels:
      run: study-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: study-db
    spec:
      containers:
      - image: mysql:5.7.28
        name: study-db
        volumeMounts:
        - name: mysql-study-storage
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
        resources: {}
      volumes:
      - name: mysql-study-storage
        persistentVolumeClaim:
          claimName: mysql-study-pvc
status: {}
