9_laravel_deploy/k8s/service_db.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: study-db
  name: study-db
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: study-db
  type: ClusterIP
status:
  loadBalancer: {}
