9_laravel_deploy/k8s/service_laravel.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: laravel-study
  name: laravel-study
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: laravel-study
  type: NodePort
status:
  loadBalancer: {}
