9_laravel_deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-study
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: laravel-study
          servicePort: 8080
  tls:
    - hosts:
      - "192.168.64.6"
      secretName: ingress-tls
